<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundBrown"
    >

    <TextView
        android:id="@+id/playerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl1_name"
        android:textSize="36dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/homeButton"
        android:layout_toEndOf="@+id/homeButton"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/boardLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/board"
        android:orientation="horizontal"
        android:weightSum="0"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="14"
            android:rowCount="3"
            android:layout_weight="0.80"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="2"
                android:layout_row="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1StoreTotal"
                    android:id="@+id/p1v7"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/p1t7"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:background="@drawable/store"
                    android:text="0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="3"
                android:layout_row="2">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1Tray7"
                    android:id="@+id/p1v6"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="move"
                    android:id="@+id/p1t6"
                    android:layout_gravity="top"
                    android:background="@drawable/tray" />




                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t0"
                    android:onClick="move"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2Tray1"
                    android:id="@+id/p2v0"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="4"
                android:layout_row="2">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1Tray6"
                    android:id="@+id/p1v5"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1t5"
                    android:onClick="move"
                    android:layout_gravity="top"
                    android:background="@drawable/tray" />



                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t1"
                    android:onClick="move"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2Tray2"
                    android:id="@+id/p2v1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="5"
                android:layout_row="2">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1Tray5"
                    android:id="@+id/p1v4"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1t4"
                    android:onClick="move"
                    android:layout_gravity="top"
                    android:background="@drawable/tray" />


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t2"
                    android:onClick="move"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2Tray3"
                    android:id="@+id/p2v2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="6"
                android:layout_row="2">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1Tray4"
                    android:id="@+id/p1v3"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1t3"
                    android:onClick="move"
                    android:layout_gravity="top"
                    android:background="@drawable/tray" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t3"
                    android:onClick="move"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2Tray4"
                    android:id="@+id/p2v3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="7"
                android:layout_row="2">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1Tray3"
                    android:id="@+id/p1v2"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1t2"
                    android:onClick="move"
                    android:layout_gravity="top"
                    android:background="@drawable/tray" />


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t4"
                    android:onClick="move"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2Tray5"
                    android:id="@+id/p2v4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="8"
                android:layout_row="2">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1Tray2"
                    android:id="@+id/p1v1"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1t1"
                    android:onClick="move"
                    android:layout_gravity="top"
                    android:background="@drawable/tray" />


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t5"
                    android:onClick="move"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2Tray6"
                    android:id="@+id/p2v5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="9"
                android:layout_row="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1Tray1"
                    android:id="@+id/p1v0"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1t0"
                    android:onClick="move"
                    android:layout_gravity="top"
                    android:background="@drawable/tray" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t6"
                    android:onClick="move"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2Tray7"
                    android:id="@+id/p2v6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="10"
                android:layout_row="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2StoreTotal"
                    android:id="@+id/p2v7"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2t7"
                    android:layout_row="2"
                    android:layout_column="10"
                    android:layout_gravity="center"
                    android:background="@drawable/store"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
        </GridLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frameLayoutBoard"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="MusicButton"
            android:background="@drawable/soundon"
            android:id="@+id/buttonMusic"
            android:layout_gravity="right|top" />
    </FrameLayout>

    <TextView
        android:id="@+id/playerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl2_name"
        android:textSize="36dp"
        android:layout_marginRight="81dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeButtonBoard"
        android:background="@drawable/homebutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentBottom="true"
        android:onClick="ReturnHome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Both Players Turn"
        android:id="@+id/turnTextView"
        android:layout_below="@+id/playerOne"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

</RelativeLayout>
